Resolves: tdf#158265 Store more than 100th seconds precision in date+time

e.g. office:date-value

Change-Id: I9bb4b589cdb8c6f04fa39ba7ec4254207eaa3663
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160124
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 1627271703a39aad92cc5d5f5bfd75a8d7ab3d2b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160040
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>